urpc/internal/core/analysis/testdata/errors/duplicates/pattern_rpc_same_name.ufo
// @expect: E805
// Pattern and RPC share the same name

pattern Products = "products.{id}"

rpc Products {
	proc GetProduct {
		input { id: string }
		output { name: string }
	}
}
